Updated the community guides page to look like the forums. Fixed the category controll box on the usr profile page. Added a class to the HTML so that the page does jump when going from a page with lots of content to a page with little content

--- a/www/css/community_board_forums.css
+++ b/www/css/community_board_forums.css
@@ -2,3 +2,11 @@
 	overflow: hidden;
 	min-height: 150px;
 }
+
+.open{
+	height: 100%
+}
+
+.closed-panel{
+	height: 100px;
+}
